<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/income"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp" />

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <Spinner
            android:id="@+id/spinner1"
            style="Android:SpinnerStyle"
            android:layout_width="283dp"
            android:layout_height="82dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="252dp"
            android:layout_toLeftOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/spinner1"
            android:text="@string/income_question"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/spinner1"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/spinner1"
            android:ems="10"
            android:inputType="number"
            android:text="@string/default_income" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/income_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner1"
            android:layout_marginTop="154dp"
            android:layout_toLeftOf="@+id/editText1"
            android:text="Button" />

    </RelativeLayout>

</LinearLayout>
